--- a/jasonvid.html
+++ b/jasonvid.html
@@ -140,6 +140,33 @@
       </div>
     </div>
 
+    
+    <!-- Another Video Card -->
+    <div class="card" data-id="video2">
+      <video controls>
+        <source src="videos/jedit3.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+      <div class="card-body">
+        <h3>codm vs fortnite</h3>
+        <p>by jason</p>
+        <div class="actions">
+          <button class="btn like-btn">👍 Like</button>
+        </div>
+        <div class="stats">
+          <span class="likes">0 Likes</span> • 
+          <span class="views">0 Views</span>
+        </div>
+        <div class="comments"></div>
+        <form class="comment-form">
+          <input type="text" name="name" placeholder="Your name" required>
+          <textarea name="text" placeholder="Leave a comment..." required></textarea>
+          <button class="btn" type="submit">Post</button>
+        </form>
+      </div>
+    </div>
+
+
     <!-- Video Card Example -->
     <div class="card" data-id="video1">
       <video controls>
@@ -207,4 +234,5 @@
     });
   </script>
 </body>
+
 </html>
